--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
-.App {
-  text-align: center;
+/* Generales  */
+a{
+  text-decoration: none;
+}
+a:hover{
+  color: white; 
+   text-decoration: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Padding */
+
+.py-1{
+  padding: 1rem 0;
+}
+.py-2{
+  padding: 2rem 0;
+}
+.py-3{
+  padding: 3rem 0;
+}
+.py-4{
+  padding: 4rem 0;
+}
+.pb-1{
+  padding: 4rem 0;
+}
+.pb-2{
+  padding: 4rem 0;
+}
+.pb-3{
+  padding: 4rem 0;
+}
+.pb-4{
+  padding: 4rem 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+/* Margin */
+.m-1{
+  margin: 1rem;
+}
+.m-2{
+  margin: 2rem;
+}
+.m-3{
+  margin: 3rem;
+}
+.m-4{
+  margin: 4rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Barra de navegacion */
+.barradenavegacion{
+  background: rgba(0, 0, 0, 0.61);
 }
 
-.App-link {
-  color: #61dafb;
+.margendeescritorio{
+  margin-left: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logonavbar{
+  max-width: 120px;
+  
+}
+
+/* Inicio */
+
+.bg-imagen-header{
+  background-image: url("imagenes/videobg10.png"); 
+  background-color: #cccccc; 
+  height: 500px; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+   
+}
+.borde-crema{
+  height: 20px;
+  background-color: rgb(238, 193, 109);
+}
+.borde-blanco{
+  height: 20px;
+  background-color: rgb(255, 255, 255);
+}
+.bg-imagen-info{
+  background-image: linear-gradient(
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)
+  ),url("imagenes/section-bg4.png"); 
+  background-color: #cccccc; 
+  height: 500px; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+   
 }
