--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,7 @@ padding-top: 1rem;
 .mt-4{
   margin-top: 4rem;
 }
+
 .mb-0{
   margin-bottom: 0;
 }
@@ -461,5 +462,18 @@ padding-top: 1rem;
 
   .borde-crema-contacto{
     border: rgb(238, 193, 109) 1px solid;
+    border-radius: 19px;
 
+  }
+  .p-contacto{
+    padding: 1rem;
+  }
+  .fuente-contacto{
+    font-size: 2rem;
+  }
+  .m-mapa{
+    margin-top: 24%;
+  }
+  .mapa{
+    border-radius: 20px;
   }
