--- a/src/App.css
+++ b/src/App.css
@@ -786,8 +786,18 @@ padding-top: 1rem;
       rgba(0, 0, 0, 0.5)
     ), url("imagenes/bggaleria.png"); 
     background-color: #cccccc; 
-    height: 100vh; 
+    height: auto; 
     background-position: center; 
     background-repeat: no-repeat; 
     background-size: cover;
   }
+
+ .borde-galeria{
+  transition: transform .3s
+
+ }
+
+ .borde-galeria:hover{
+  transform: scale(1.5);
+
+ }
